# vault-crm

./: .eslintrc.cjs  .gitignore  README.md  RELEASE_NOTES.md  benchmark-results.json  components.json  electron-builder.beta.yml  electron-builder.yml  electron.vite.config.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  tsconfig.web.json  vite.config.js  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  release-beta.yml
api/: README.md  package.json
api/license/: generate.ts  status.ts  verify.ts
docs/: ARCHITECTURE.md  BETA_PROGRAM.md  DESIGN_SYSTEM.md  HOTFIX_PLAYBOOK.md  PRIVACY.md  PRODUCT_BACKLOG.md  SECURITY.md
resources/: entitlements.mac.plist  license.txt
scripts/: benchmark.ts  generate-icons.mjs  generate-license.ts  generate-mock-data.ts  generate-test-data.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src/components/: CommandPalette.tsx  DomainAvatar.tsx  ErrorBoundary.tsx  MarkdownView.tsx
src/components/__tests__/: DomainAvatar.test.tsx
src/components/layout/: MainLayout.tsx  Sidebar.tsx
src/components/ui/: button.tsx  card.tsx  input.tsx
src/hooks/: useReminderNotifications.ts
src/lib/: api.ts  noteTemplates.ts  privacy.ts  relationshipHealth.ts  savedViews.ts
src/main/: index.ts
src/main/database/: connection.ts  schema.ts  seed-mock-data.ts  types.ts
src/main/ipc/: channels.ts  handlers.ts
src/pages/: Companies.tsx  CompanyDetail.tsx  ContactDetail.tsx  Contacts.tsx  Dashboard.tsx  Dedup.tsx  EncryptionSetup.tsx  Export.tsx  Import.tsx  Inbox.tsx  Settings.tsx
src/preload/: index.ts
src/renderer/: App.tsx  index.html  main.tsx
src/styles/: globals.css
(+88 files in other folders)
