[package]
name = "vault-crm"
version = "0.1.0"
description = "Local-first personal CRM — no cloud, your data on device"
authors = ["VaultCRM"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "vault_crm_lib"
path = "src/lib.rs"

[[bin]]
name = "vault-crm"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
# F1.2: OS keychain — Windows Credential Manager, macOS Keychain, Linux Secret Service
keyring = "2"
rand = "0.8"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
